# chicken-transformer

./: .gitignore  DEPLOYMENT.md  README.md  VALIDATION_REPORT.md  VALIDATION_REPORT_PHASE3.md  VALIDATION_REPORT_PHASE5.md  VALIDATION_REPORT_UI.md  check_env.py  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
config/: exercises.json
docs/: architecture.md  architecture.mermaid  state-machine.md  state-machine.mermaid
scripts/: benchmark_detector.py  export_model.py  fitness-game.service  jetson_clocks.sh  validate_feature_003.py
specs/001-fitness-dice-game/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fitness-dice-game/checklists/: requirements.md
specs/001-fitness-dice-game/contracts/: action-validator.md  game-state.md  pose-detector.md
specs/003-enhance-game-experience/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-enhance-game-experience/checklists/: requirements.md
specs/003-enhance-game-experience/contracts/: rolling-state.md
src/: main.py
src/camera/: camera_manager.py  gstreamer_pipeline.py
src/game/: game_manager.py
src/models/: game_context.py  mock_detector.py  pose_detector.py  tensorrt_detector.py
src/states/: completion_state.py  dice_state.py  game_state.py  rolling_state.py  task_display_state.py  task_executing_state.py  waiting_state.py
src/tasks/: progress_tracker.py  task_library.py  workout_task.py
src/tasks/validators/: action_validator.py  burpee_validator.py  factory.py  high_knees_validator.py  jumping_jack_validator.py  lunge_validator.py  mountain_climber_validator.py  plank_validator.py  pushup_validator.py  russian_twist_validator.py  situp_validator.py  squat_validator.py
src/ui/: camera_panel.py  game_window.py  info_panel.py  skeleton_renderer.py  theme.py
src/utils/: constants.py  data_structures.py  geometry.py  logger.py
tests/integration/: test_imports.py  test_phase2_integration.py
tests/unit/: test_data_structures.py  test_factory_and_jumping_jack.py  test_game_logic.py  test_game_loop.py  test_geometry.py  test_mock_detector.py  test_task_library.py  test_validators.py
